refactor(server): remove Delete and Update Address
