# packages/server/src/addresses/api/AddressesController.ts
@@ -2,17 +2,15 @@ import { Body, Param, Res } from '@nestjs/common';
 import { plainToInstance } from 'class-transformer';
 import { Response } from 'express';
 
-import { ApiController, ApiCreate, ApiDelete, ApiGet, ApiObjectIdParam, ApiUpdate, Url } from '../../shared';
-import { CreateAddressHandler, DeleteAddressHandler, GetAddressHandler, UpdateAddressHandler } from '../domain';
-import { AddressDto, CreateAddressDto, UpdateAddressDto } from './AddressDto';
+import { ApiController, ApiCreate, ApiGet, ApiObjectIdParam, Url } from '../../shared';
+import { CreateAddressHandler, GetAddressHandler } from '../domain';
+import { AddressDto, CreateAddressDto } from './AddressDto';
 
 @ApiController({ path: 'addresses', name: 'Addresses', description: 'Operations about addresses' })
 class AddressesController {
   constructor(
     private readonly getAddressHandler: GetAddressHandler,
     private readonly createAddressHandler: CreateAddressHandler,
-    private readonly updateAddressHandler: UpdateAddressHandler,
-    private readonly deleteAddressHandler: DeleteAddressHandler,
   ) {}
 
   @ApiObjectIdParam()
@@ -28,18 +26,6 @@ class AddressesController {
     const address = await this.createAddressHandler.exec(createAddressDto);
     res.setHeader('Location', `${url.href}/${address.id}`);
     return plainToInstance(AddressDto, address);
-  }
-
-  @ApiObjectIdParam()
-  @ApiUpdate({ name: 'address' })
-  async update(@Param('id') id: string, @Body() updateAddressDto: UpdateAddressDto) {
-    return this.updateAddressHandler.exec({ id, ...updateAddressDto });
-  }
-
-  @ApiObjectIdParam()
-  @ApiDelete({ name: 'address' })
-  async delete(@Param('id') id: string) {
-    return this.deleteAddressHandler.exec({ id });
   }
 }
 
